fix: close sidebar on route change on mobile screens

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1285,6 +1285,10 @@ body {
           user-select: none;
 }
 
+.resize {
+  resize: both;
+}
+
 .list-disc {
   list-style-type: disc;
 }
